working on Epicodus W2D3 added title_case module, working on queen_attack module.  Have form with select fields

--- a/sites/default/files/sweaver/sweaver_modern_theme_2_draft.css
+++ b/sites/default/files/sweaver/sweaver_modern_theme_2_draft.css
@@ -1,15 +1,8 @@
-a span {
-  color: #0288b8;
-  line-height: 1px;
-  font-size: 2px;
+.form-item label {
+  width: 494px;
 }
 
-.field-item p {
-  font-style: italic;
-}
-
-#logo img {
-  margin-top: 0px;
-  margin-bottom: 0px;
+.form-item .form-text {
+  width: 306px;
 }
 
